--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
   "scripts": {
     "test": "gulp travis",
     "publish-please": "del-cli package-lock.json node_modules && npm i && publish-please",
-    "prepublish": "publish-please guard"
+    "prepublish": "publish-please guard",
+    "start": "node node_modules/gulp/bin/gulp http-playground"
   }
 }
