--- a/package.json
+++ b/package.json
@@ -107,6 +107,6 @@
     "test": "gulp travis",
     "publish-please": "del-cli package-lock.json node_modules && npm i && publish-please",
     "prepublish": "publish-please guard",
-    "start": "node node_modules/gulp/bin/gulp http-playground"
+    "start": "npm install; node node_modules/gulp/bin/gulp http-playground"
   }
 }
